@@ -82,10 +82,16 @@ with PasswordSafe V3.26 or later).</td>
 current database's default Autotype string (if set via Manage->Options).</td>
 </tr> 
 <tr>
-<td align="center" width="100"><a href="nojs.html" onclick="FR(2964804);return false;">2964804</a><br></td>
+<td align="center" width="100"><a href="nojs.html" onclick="FR(2964804);return false;">2964804</a>,<br>
+<a href="nojs.html" onclick="FR(1855389);return false;">1855389</a></td></td>
 <td>The user can specify the list of symbols valid for a database and can
 override this for any particular entry. Note: the inbuilt special symbols
 for EasyVision and Pronounceable passwords can not be overriden in either case.</td>
+</tr>
+<tr>
+<td align="center" width="100"><a href="nojs.html" onclick="FR(1831893);return false;">1831893</a>,<br>
+<a href="nojs.html" onclick="FR(1471134);return false;">1471134</a><br></td>
+<td>Provide Autotype code "\s" to send "Shift+Tab".</td>
 </tr>
 <tr>
 <td align="center" width="100">n/a</td>
